--- a/DogVSCat.ipynb
+++ b/DogVSCat.ipynb
@@ -34,7 +34,7 @@
     "    torchvision.transforms.ToTensor(),\n",
     "    torchvision.transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])\n",
-    "root = r\"path_to_dataset",
+    "root = r\\\"path_to_dataset\\\"\n",
     "dataset = torchvision.datasets.ImageFolder(root=root, transform=transform)\n",
     "\n",
     "train_dataset,test_dataset = torch.utils.data.random_split(dataset,[int(0.8*len(dataset)),len(dataset)-int(0.8*len(dataset))])\n",
