--- a/DogVSCat.ipynb
+++ b/DogVSCat.ipynb
@@ -15,26 +15,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch:  0 Loss:  411.43423837423325\n",
-      "Epoch:  1 Loss:  375.28732973337173\n",
-      "Epoch:  2 Loss:  348.75887310504913\n",
-      "Epoch:  3 Loss:  326.0817424952984\n",
-      "Epoch:  4 Loss:  301.7615183889866\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "transform = torchvision.transforms.Compose([\n",
     "    torchvision.transforms.Resize((256, 256)),\n",
     "    torchvision.transforms.ToTensor(),\n",
     "    torchvision.transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
     "])\n",
-    "root = r\\\"path_to_dataset\\\"\n",
+    "root = r\"path_to_dataset\"\n",
     "dataset = torchvision.datasets.ImageFolder(root=root, transform=transform)\n",
     "\n",
     "train_dataset,test_dataset = torch.utils.data.random_split(dataset,[int(0.8*len(dataset)),len(dataset)-int(0.8*len(dataset))])\n",
@@ -82,20 +70,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-    
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 73.92%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "correct = 0\n",
     "total = 0\n",
@@ -114,15 +89,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Saved\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "torch.save(model.state_dict(), \"🐈v🐕.pth\")\n",
     "print(\"Model Saved\")"
